feat: improve mobile home and account settings
